[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["Omkar Khairnar <110295103+Omkar-Khairnar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
